--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com/"
+baseURL = "https://computacao-uabj.github.io/computacao-uabj2.github.io/"
 title = "My Hugo Site"
 theme = "hugo-arcana"
 
