--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ coverage.*
 *.coverprofile
 profile.cov
 
+# Output of the go coverage tool
+public/
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
