--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "themes/hugo-arcana"]
+	path = themes/hugo-arcana
+	url = https://github.com/half-duplex/hugo-arcana.git
 [submodule "themes/blowfish"]
 	path = themes/blowfish
 	url = https://github.com/nunocoracao/blowfish.git
